--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="InstaTry">
-    <meta property="og:description" content="Описание страницы">
+    <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">
     <meta property="og:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png">
+    <meta property="og:image:height" content="480">
+    <meta property="og:image:width" content="360">
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://krivetka.github.io/shae/">
     <title>InstaTry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
