--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="InstaTry">
+    <meta property="og:site_name" content="InstaTry">
     <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">
     <meta property="og:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png">
     <meta property="og:image:height" content="630">
