--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="InstaTry">
     <meta property="og:site_name" content="InstaTry">
     <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">
-    <meta property="og:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png">
+    <meta property="og:image" content="https://img.zerkalo.io/1200x630s/zaglushki/0c/c/og_47524_stroitelstov_stroyka_zhile_dom_kvartira_04.jpg?1693329067">
     <meta property="og:image:height" content="630">
     <meta property="og:image:width" content="1200">
     <meta property="og:type" content="product" />
