--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://img.zerkalo.io/1200x630s/zaglushki/0c/c/og_47524_stroitelstov_stroyka_zhile_dom_kvartira_04.jpg?1693329067">
     <meta property="og:image:height" content="630">
     <meta property="og:image:width" content="1200">
-    <meta property="og:type" content="product" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://krivetka.github.io/shae/">
     <title>InstaTry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
