--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
     <meta property="og:site_name" content="In Poland" />
     <meta property="og:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
     <meta property="og:type" content="website" />
-
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@in_poland_com" />
+    <meta name="twitter:title" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
+    <meta name="twitter:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
+    <meta name="twitter:image" content="https://in-poland.com/thumbnails/1606998890-1165-800.webp" />
+    <meta name="twitter:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
     <link rel="canonical" href="https://in-poland.com/politsealnaya-shkola-obrazovanie-dlya-vzroslykh-otvety-na-voprosy/" />
-    
+
+
     <link rel="icon" type="image/png" sizes="192x192" href="https://in-poland.com/imgs/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://in-poland.com/imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="https://in-poland.com/imgs/favicon/favicon-96x96.png">
