--- a/index.html
+++ b/index.html
@@ -3,52 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <meta property="og:title" content="InstaTry">-->
-<!--    <meta property="og:site_name" content="InstaTry">-->
-<!--    <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">-->
-<!--    <meta property="og:image" content="https://img.zerkalo.io/1200x630s/zaglushki/0c/c/og_47524_stroitelstov_stroyka_zhile_dom_kvartira_04.jpg?1693329067">-->
-<!--    <meta property="og:image:height" content="630">-->
-<!--    <meta property="og:image:width" content="1200">-->
-<!--    <meta property="og:type" content="website" />-->
-<!--    <meta property="og:url" content="https://krivetka.github.io/shae/">-->
+    <meta property="og:title" content="InstaTry">
+    <meta property="og:site_name" content="InstaTry">
+    <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://krivetka.github.io/shae/">
+    
 
-
-    <meta name="description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
-    <meta name="keywords" content="Полицеальная, школа., Образование, взрослых., Ответы, вопросы, работа в Польше, польский язык, новости Польши" />
-
-    <meta property="og:title" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
-    <meta property="og:url" content="https://in-poland.com/politsealnaya-shkola-obrazovanie-dlya-vzroslykh-otvety-na-voprosy/" />
-    <meta property="og:image" content="https://in-poland.com/thumbnails/1606998890-1165-800.webp" />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="534" />
     <meta property="og:image:type" content="image/webp" />
     <meta property="og:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
-    <meta property="og:image" content="https://in-poland.com/thumbnails/1606998890-1165-800.webp" />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="534" />
+    <meta property="og:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png" />
+    <meta property="og:image:width" content="360" />
+    <meta property="og:image:height" content="500" />
     <meta property="og:image:type" content="image/webp" />
     <meta property="og:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
     <meta property="og:site_name" content="In Poland" />
     <meta property="og:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
-    <meta property="og:type" content="website" />
+    
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@in_poland_com" />
     <meta name="twitter:title" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
     <meta name="twitter:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
-    <meta name="twitter:image" content="https://in-poland.com/thumbnails/1606998890-1165-800.webp" />
+    <meta name="twitter:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png" />
     <meta name="twitter:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
-    <link rel="canonical" href="https://in-poland.com/politsealnaya-shkola-obrazovanie-dlya-vzroslykh-otvety-na-voprosy/" />
-
-
-    <link rel="icon" type="image/png" sizes="192x192" href="https://in-poland.com/imgs/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://in-poland.com/imgs/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://in-poland.com/imgs/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://in-poland.com/imgs/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://in-poland.com/imgs/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://in-poland.com/imgs/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" href="https://in-poland.com/imgs/favicon/favicon.ico" type="image/x-icon">
 
 
     <title>InstaTry</title>
