--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
     <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://krivetka.github.io/shae/">
-    
-
-    <meta property="og:image:type" content="image/webp" />
-    <meta property="og:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
     <meta property="og:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png" />
     <meta property="og:image:width" content="360" />
     <meta property="og:image:height" content="500" />
     <meta property="og:image:type" content="image/webp" />
-    <meta property="og:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
-    <meta property="og:site_name" content="In Poland" />
-    <meta property="og:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
-    
+    <meta property="og:image:alt" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online" />
+    <meta property="og:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online" />
+
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
-    <meta name="twitter:description" content="Получение образования - весьма популярное основание для переезда в Польшу у иностранцев. Одной из таких форм обучения является полицеальная школа. Но до сих пор остаются ..." />
+    <meta name="twitter:title" content="InstaTry" />
+    <meta name="twitter:description" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online" />
     <meta name="twitter:image" content="https://api.instatry.ai/img/obj/f2adeac9190ca809f50201695117e73b723ddab809b7508f72a8a57c667767ea.png" />
-    <meta name="twitter:image:alt" content="Полицеальная школа. Образование для взрослых. Ответы на вопросы" />
+    <meta name="twitter:image:alt" content="FINISH - Płyn nabłyszczający do zmywarki cytrynowy | Auchan zakupy online" />
 
 
     <title>InstaTry</title>
